@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.287 2008/12/08 06:59:14 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.288 2008/12/10 06:53:13 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -3642,12 +3642,8 @@ plot_boxes(struct curve_points *plot, int xaxis_y)
 		    } else
 			(*t->fillbox) (style, x, y, w, h);
 
-		    /* FIXME EAM - Is this still correct??? */
-		    if (strcmp(t->name, "fig") == 0) break;
-
-		    if (plot->fill_properties.border_linetype == LT_NODRAW)
+		    if (!need_fill_border(&plot->fill_properties))
 			break;
-		    need_fill_border(&plot->fill_properties);
 		}
 		newpath();
 		(*t->move) (xl, yb);
@@ -3657,7 +3653,7 @@ plot_boxes(struct curve_points *plot, int xaxis_y)
 		(*t->vector) (xl, yb);
 		closepath();
 
-		if( t->fillbox && plot->fill_properties.border_linetype != LT_DEFAULT) {
+		if( t->fillbox && plot->fill_properties.border_color.type != TC_DEFAULT) {
 		    (*t->linetype)(plot->lp_properties.l_type);
 		    if (plot->lp_properties.use_palette)
 			apply_pm3dcolor(&plot->lp_properties.pm3d_color,t);
@@ -3727,7 +3723,8 @@ plot_circles(struct curve_points *plot)
     int style = style_from_fill(fillstyle);
     TBOOLEAN withborder = FALSE;
 
-    if (fillstyle->border_linetype != LT_NODRAW)
+    if (fillstyle->border_color.type != TC_LT
+    ||  fillstyle->border_color.lt != LT_NODRAW)
 	withborder = TRUE;
 
     for (i = 0; i < plot->p_count; i++) {
@@ -4039,8 +4036,9 @@ plot_c_bars(struct curve_points *plot)
 	}
 
 	/* Reset to original color, if we changed it for the border */
-	if ((plot->fill_properties.border_linetype != LT_NODRAW)
-	&&  (plot->fill_properties.border_linetype != LT_DEFAULT)) {
+	if (plot->fill_properties.border_color.type != TC_DEFAULT
+	&& !( plot->fill_properties.border_color.type == TC_LT &&
+	      plot->fill_properties.border_color.lt == LT_NODRAW)) {
 		(*t->linetype)(plot->lp_properties.l_type);
 		if (plot->lp_properties.use_palette)
 		    apply_pm3dcolor(&plot->lp_properties.pm3d_color,t);
@@ -5295,7 +5293,8 @@ do_key_sample(
 	    }
 
 	    /* need_fill_border will set the border linetype, but candlesticks don't want it */
-	    if ((this_plot->plot_style == CANDLESTICKS && fs->border_linetype == LT_NODRAW)
+	    if ((this_plot->plot_style == CANDLESTICKS && fs->border_color.type == TC_LT
+							&& fs->border_color.lt == LT_NODRAW)
 	    ||   style == FS_EMPTY
 	    ||   need_fill_border(fs)) {
 		newpath();
@@ -5309,8 +5308,8 @@ do_key_sample(
 			    xl + key_sample_left,  yl - key_entry_height/4);
 		closepath();
 	    }
-	    if (fs->fillstyle != FS_EMPTY && fs->border_linetype != LT_NODRAW
-	    &&  fs->fillstyle != FS_DEFAULT) {
+	    if (fs->fillstyle != FS_EMPTY && fs->fillstyle != FS_DEFAULT
+	    && !(fs->border_color.type == TC_LT && fs->border_color.lt == LT_NODRAW)) {
 		(*t->linetype)(this_plot->lp_properties.l_type);
 		if (this_plot->lp_properties.use_palette)
 		    apply_pm3dcolor(&this_plot->lp_properties.pm3d_color,t);
